--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,45 @@
 page-home {
+  .contentHome {
+    background-color: #8a05be;
+  }
 
+  .splash-bg {
+    position: relative;
+    background: url('../../assets/imgs/nubankbg.png') no-repeat transparent;
+    background-size: cover;
+    height: 25%;
+    z-index: 1;
+    background-repeat: repeat-x;
+    animation: animatedBackground 40s linear infinite;
+  }
+
+  .splash-info {
+    position: relative;
+    z-index: 2;
+    margin-top: 30px;
+    text-align: center;
+  }
+
+  .splash-intro {
+    font-size: 18px;
+    color: white;
+    font-weight: bold;
+    max-width: 80%;
+    margin: auto;
+  }
+  button.login{
+    margin-top: 25px;
+    border: 2px solid white;
+    color: white;
+    background-color: #8a05be;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+  }
+
+  button.signup{
+    margin-top: 25px;
+    border: 2px solid white;
+    color: white;
+    background-color: #8a05be;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+  }
 }
