--- a/src/pages/investimentos/investimentos.scss
+++ b/src/pages/investimentos/investimentos.scss
@@ -1,3 +1,21 @@
 page-investimentos {
+    .content {
+        background: #9b50b9;
+    }
+
+    .item {
+        background: #9b50b9;
+    }
+
+    ion-label .item-inner {
+        background: white;
+        border-radius: 5px;
+        padding: 3px;
+    }
+
+    ion-label .label {
+        color: rgb(74, 192, 228);
+        padding: 3px;
+    }
 
 }
