--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -5,9 +5,9 @@ page-dashboard {
 
   .splash-bg {
     position: relative;
-    background: url('../../assets/imgs/nubankbg.png') no-repeat transparent;
-    background-size: cover;
-    height: 25%;
+    background: url('../../assets/imgs/nubankbg.png') no-repeat transparent center;
+    background-size: auto 100%;
+    height: 45%;
     z-index: 1;
   }
 
