--- a/src/pages/carteira-detail/carteira-detail.scss
+++ b/src/pages/carteira-detail/carteira-detail.scss
@@ -28,4 +28,17 @@ page-carteira-detail {
     padding-top: 8px;
   }
 
+  .button {
+    background: white;
+    color: #9b50b9;
+    border: #9b50b9 solid 1px;
+    border-radius: 5px;
+  }
+
+  .button:hover, .button:active, .button:focus, .button.active {
+    background-color: #9b50b9;
+    color: white;
+    border: #9b50b9 solid 1px;
+    border-radius: 5px;
+  }
 }
